fixed horizontal overflow for the main page and the examples page. Fixed the examples size to display properly on mobile.

--- a/common/examples.css
+++ b/common/examples.css
@@ -2,12 +2,21 @@
 #container .extext { top: 160px!important; width: 400px!important; }
 #difficulty_level { position: absolute; bottom: 18px; left: 12px; font-size: 24px; }
 
-#filter_menu { width:820px; height:80px; margin-left:15px; }
+#filter_menu { 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    justify-content: center;
+    /* width:820px;  */
+    /* height:80px; */
+     /* margin-left:15px;  */
+}
 #filter_function_label { margin-top: 2rem; }
 #filter_function { display: block; height: 1rem; margin-left:15px; margin-bottom: 2rem; }
 #matches_counter { display: inline; margin-bottom: 2rem; }
 
-.legendButton { float:left; margin-right:8px; margin-bottom:20px; width:84px; height:78px; text-align:right; line-height:130px; cursor: pointer; transition: 0.125s; }
+.legendButton {  width:84px; height:78px; text-align:right; line-height:130px; cursor: pointer; transition: 0.125s; }
+
 #core       { background-color:#e1e1e1; color:#5c5a5a; border:5px solid #898888; }
 #shapes     { background-color:#f0d6d6; color:#c55757; border:5px solid #e66666; }
 #textures   { background-color:#c8eabf; color:#60815a; border:5px solid #75a06d; }
@@ -36,7 +45,20 @@
 .fshaders p { color:#a864d2!important; }
 .faudio p { color:#8c7539!important; }
 .fphysics p { color:#00a820!important; }
-
+#container{
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    flex-wrap: wrap;
+    > div{
+        margin: 0;
+        max-width: 90%;
+        a{
+            width: 100%;
+            img{ height: auto;}
+        }
+    }
+}
 #container .fcore a img, #container .fcore a { border: none; overflow: hidden; float: left; background-color: #e1e1e1; opacity: 1; }
 #container .fcore a:hover { border: 10px solid #898888; }
 #container .fcore a:hover img { margin: -10px; opacity: 0.4; }
